Update Store product image lightbox. It's drawn quite differently now to account for varying image sizes on all our sites. Other notable improvements: - image stays centered while resizing the browser window - scroll height is set to max(image height, viewport) so you can't scroll images out of view - lightbox chrome uses fixed position so it doesn't scroll out of view - custom events are available to hook into 3rd party analytics software
git-svn-id: file:///Users/gauthierm/svnrepo/public/store/trunk@57288 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/store-product-image-display.css
+++ b/www/styles/store-product-image-display.css
@@ -1,90 +1,135 @@
+/* Overlay */
+
 .store-product-image-display-overlay {
-	background: #fff;
+	display: block;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
-	filter: alpha(opacity=75);
-	opacity: 0.75;
 }
+
+.store-product-image-display-overlay-mask {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: block;
+	background: #000;
+	opacity: 0.80;
+	filter: alpha(opacity=80);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+}
+
+.store-product-image-display-overlay-mask:active,
+.store-product-image-display-overlay-mask:focus {
+	/* prevent horizontal scrolling when overlay link is selected */
+	outline: none;
+}
+
+
+/* Header */
+
+.store-product-image-display-header {
+	position: fixed;
+	top: 0;
+	left: 50%;
+	background: #f3eee6;
+	color: #5f5851;
+	display: block;
+	text-align: center;
+	width: 100%;
+	margin-left: -50%;
+	text-shadow: 0 1px 1px #fff, 0 -1px 1px #fff;
+	border-bottom: 1px solid #fff;
+	box-shadow: 0 2px 4px -1px rgba(0,0,0,0.80);
+	-webkit-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.80);
+	-moz-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.80);
+}
+
+/* IE hack since shadows are not supported */
+.store-product-image-display-header {
+	border-bottom: 1px solid #5f5851\9
+}
+
+.store-product-image-display-title {
+	font-weight: bold;
+	font-size: 120%;
+	padding: 6px 10px;
+}
+
+.store-product-image-display-links {
+	position: fixed;
+	top: 0;
+	right: 0;
+	font-weight: bold;
+	font-size: 85%;
+	text-transform: uppercase;
+}
+
+.store-product-image-display-links a {
+	display: block;
+	float: left;
+	padding: 9px 10px;
+	text-decoration: none;
+}
+
+.store-product-image-display-links a,
+.store-product-image-display-links a:link,
+.store-product-image-display-links a:visited {
+	color: #5f5851;
+}
+
+.store-product-image-display-close-hover,
+.store-product-image-display-close-hover:link,
+.store-product-image-display-links a:hover,
+.store-product-image-display-links a:hover:link {
+	text-decoration: underline;
+}
+
+
+/* Image */
 
 .store-product-image-display-container {
 	display: none;
 	overflow: hidden;
+
+	/* Border color. Done as a background since both Gecko and Webkit have */
+	/* rendering bugs when using borders and rounded corners. */
 	background: #aaa;
 	padding: 1px;
+
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 50%;
 
-	box-shadow: 0 2px 20px -2px rgba(0,0,0,0.25);
-	-webkit-box-shadow: 0 2px 20px -2px rgba(0,0,0,0.25);
-	-moz-box-shadow: 0 2px 20px -2px rgba(0,0,0,0.25);
+	box-shadow: 0 1px 16px #000;
+	-webkit-box-shadow: 0 1px 16px #000;
+	-moz-box-shadow: 0 1px 16px #000;
+
+	zoom: 1; /* IE hack */
+
+	/* emulate drop shadow in IE */
+	filter: progid:DXImageTransform.Microsoft.shadow(Color=#111111, Direction=180) progid:DXImageTransform.Microsoft.glow(Color=#000000, Strength=2);
+	-ms-filter: progid:DXImageTransform.Microsoft.shadow(Color=#111111, Direction=180) progid:DXImageTransform.Microsoft.glow(Color=#000000, Strength=2);
 }
 
 .store-product-image-display-wrapper {
 	background: #fff;
 	padding: 6px;
-	overflow: hidden;
-
-	zoom: 1;
 }
 
-.store-product-image-display-image-container {
-	position: relative;
-}
-
-.store-product-image-display-with-pinkies .store-product-image-display-image-container {
-	margin-left: 98px;
-}
-
-.store-product-image-display-header{
-	background: url('../images/store-product-image-display-header-bg.png');
-	background: rgba(0,0,0,0.5);
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-}
-
-.store-product-image-display-title {
+.store-product-image-display-image {
 	display: block;
-	font-weight: bold;
-	font-size: 120%;
-	padding: 6px 10px;
-	color: #fff;
-	text-align: left;
 }
 
-.store-product-image-display-close {
-	display: block;
-	float: right;
-	text-decoration: none;
-	color: #fff;
-	text-align: center;
-	text-transform: uppercase;
-	font-weight: bold;
-	font-size: 85%;
-	padding: 8px 28px 8px 12px;
-	background: url('../images/store-product-image-display-close.png') no-repeat right 9px;
-}
 
-.store-product-image-display-close:link,
-.store-product-image-display-close:hover:link {
-	color: #fff;
-}
-
-.store-product-image-display-close:hover {
-	text-decoration: underline;
-}
+/* Pinkies */
 
 .store-product-image-display-pinkies {
 	margin: 0;
-	padding: 0;
-	float: left;
-	width: 98px;
+	padding: 0 0 0 15px;
+	position: fixed;
+	left: 0;
+	top: 0;
 }
 
 .store-product-image-display-pinkies li {
@@ -93,6 +138,7 @@
 	padding: 4px;
 	vertical-align: top; /* required for IE6/7 */
 	text-align: left; /* required for IE6/7 */
+	list-style-type: none;
 }
 .store-product-image-display-pinkies li.store-product-image-display-pinky-first {
 	margin: 0;
@@ -104,19 +150,28 @@
 .store-product-image-display-pinkies li a {
 	display: block;
 }
+
 .store-product-image-display-pinkies li a img {
 	vertical-align: top; /* required for IE6/7 */
 	display: block;
+
+	padding: 4px;
+	background: #fff;
+	border: 1px solid #aaa;
+
+	box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	-moz-box-shadow: 1px 1px 3px #000;
+
+	/* emulate drop shadow in IE */
+	filter: progid:DXImageTransform.Microsoft.glow(Color=#000000, Strength=2);
+	-ms-filter: progid:DXImageTransform.Microsoft.glow(Color=#000000, Strength=2);
+}
+
+.store-product-image-display-pinkies li.store-product-image-display-pinky-selected img {
+	border-color: #9b9892;
 }
 
 .store-product-image-display-pinkies li a:focus {
 	outline: none;
-}
-
-.store-product-image-display-image {
-	display: block;
-}
-
-.store-product-image-display-clear {
-	clear: both;
 }
